--- a/community/Navigation/Feed/FeedController.xib
+++ b/community/Navigation/Feed/FeedController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeedController" customModule="community" customModuleProvider="target">
             <connections>
+                <outlet property="dropDownListArrowImage" destination="TCj-av-8Z6" id="5b3-Yv-zIY"/>
                 <outlet property="dropDownListButton" destination="pfK-ea-XfE" id="St8-CR-KQw"/>
                 <outlet property="dropDownListTable" destination="XR1-YC-qhs" id="8N8-5F-Q6v"/>
                 <outlet property="pinsTable" destination="Rmd-jj-hXC" id="GeQ-Hw-XaY"/>
@@ -35,7 +36,7 @@
                     <color key="backgroundColor" name="secondaryGray"/>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pfK-ea-XfE">
-                    <rect key="frame" x="70" y="58" width="235" height="44"/>
+                    <rect key="frame" x="70" y="58" width="195" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="qCO-r0-99Z"/>
                     </constraints>
@@ -55,6 +56,13 @@
                         <constraint firstAttribute="height" constant="150" id="gMf-PD-YDy"/>
                     </constraints>
                 </tableView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.down" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="TCj-av-8Z6">
+                    <rect key="frame" x="264" y="65" width="41" height="31.5"/>
+                    <color key="tintColor" name="secondaryGray"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="TCj-av-8Z6" secondAttribute="height" multiplier="1:1" id="Mt2-R3-GjL"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -64,6 +72,7 @@
                 <constraint firstItem="pfK-ea-XfE" firstAttribute="top" secondItem="gd7-hE-xlE" secondAttribute="bottom" constant="-62" id="1j4-Uf-uwl"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Rmd-jj-hXC" secondAttribute="trailing" id="4pN-nl-F4M"/>
                 <constraint firstItem="pfK-ea-XfE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="70" id="7fx-S4-dej"/>
+                <constraint firstItem="TCj-av-8Z6" firstAttribute="top" secondItem="gd7-hE-xlE" secondAttribute="bottom" constant="-60" id="DJ6-6G-79O"/>
                 <constraint firstItem="Rmd-jj-hXC" firstAttribute="top" secondItem="gd7-hE-xlE" secondAttribute="bottom" id="DrS-4t-RUX"/>
                 <constraint firstItem="gd7-hE-xlE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="F8A-q8-CVy"/>
                 <constraint firstItem="XR1-YC-qhs" firstAttribute="top" secondItem="pfK-ea-XfE" secondAttribute="bottom" id="KrR-1l-rTu"/>
@@ -71,8 +80,10 @@
                 <constraint firstItem="gd7-hE-xlE" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="SvG-0X-yfr"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Rmd-jj-hXC" secondAttribute="bottom" id="VWY-v9-bsN"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="XR1-YC-qhs" secondAttribute="trailing" constant="70" id="c2k-HE-s0w"/>
+                <constraint firstItem="TCj-av-8Z6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="264" id="haS-oe-QFK"/>
                 <constraint firstItem="gd7-hE-xlE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="mWV-DG-sJv"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pfK-ea-XfE" secondAttribute="trailing" constant="70" id="zuC-Cc-44s"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TCj-av-8Z6" secondAttribute="trailing" constant="70" id="w4C-O7-RKG"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pfK-ea-XfE" secondAttribute="trailing" constant="110" id="zuC-Cc-44s"/>
             </constraints>
             <point key="canvasLocation" x="138.40000000000001" y="109.29535232383809"/>
         </view>
@@ -83,6 +94,7 @@
         </tapGestureRecognizer>
     </objects>
     <resources>
+        <image name="chevron.down" catalog="system" width="128" height="72"/>
         <namedColor name="mainGray">
             <color red="0.17299999296665192" green="0.17299999296665192" blue="0.18000000715255737" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
