--- a/community/Navigation/Feed/Cell/PinInFeedCell.xib
+++ b/community/Navigation/Feed/Cell/PinInFeedCell.xib
@@ -29,41 +29,56 @@
                             <constraint firstAttribute="height" constant="21" id="yuL-HQ-noJ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ppm-T2-7GH">
+                        <rect key="frame" x="108" y="45" width="105" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="105" id="ARS-Wc-hVC"/>
+                            <constraint firstAttribute="height" constant="21" id="M7U-oL-gFO"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="2oC-Pd-7Ei">
+                        <rect key="frame" x="108" y="74" width="226" height="26"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HaA-jj-9TU">
+                            <size key="itemSize" width="60" height="26"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ca-oa-XHg">
-                        <rect key="frame" x="108" y="68" width="212" height="21"/>
+                        <rect key="frame" x="221" y="45" width="113" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="TeW-TI-NFf"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" name="mainGray"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ppm-T2-7GH">
-                        <rect key="frame" x="108" y="45" width="212" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="M7U-oL-gFO"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" name="secondaryGray"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" name="secondaryGray"/>
+                <color key="backgroundColor" name="mainGray"/>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="uDC-2N-fEG" secondAttribute="bottom" id="1ld-N9-Slo"/>
+                    <constraint firstItem="6ca-oa-XHg" firstAttribute="top" secondItem="MXA-4N-rFj" secondAttribute="bottom" constant="8" symbolic="YES" id="35S-kl-BoA"/>
                     <constraint firstItem="uDC-2N-fEG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="6a9-Cc-ccv"/>
                     <constraint firstItem="MXA-4N-rFj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="7FT-eb-cOU"/>
-                    <constraint firstItem="6ca-oa-XHg" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="AlK-Nn-WJe"/>
                     <constraint firstItem="MXA-4N-rFj" firstAttribute="leading" secondItem="uDC-2N-fEG" secondAttribute="trailing" constant="8" symbolic="YES" id="CqJ-O5-qkF"/>
+                    <constraint firstAttribute="trailing" secondItem="2oC-Pd-7Ei" secondAttribute="trailing" constant="6" id="G16-Zp-7aR"/>
                     <constraint firstItem="Ppm-T2-7GH" firstAttribute="leading" secondItem="uDC-2N-fEG" secondAttribute="trailing" constant="8" symbolic="YES" id="IcM-kg-Gxt"/>
-                    <constraint firstAttribute="trailing" secondItem="Ppm-T2-7GH" secondAttribute="trailing" constant="20" symbolic="YES" id="SUB-Wx-oRL"/>
+                    <constraint firstAttribute="bottom" secondItem="2oC-Pd-7Ei" secondAttribute="bottom" id="N1Y-9r-Of3"/>
+                    <constraint firstItem="2oC-Pd-7Ei" firstAttribute="leading" secondItem="uDC-2N-fEG" secondAttribute="trailing" constant="8" symbolic="YES" id="YCA-hY-326"/>
                     <constraint firstItem="uDC-2N-fEG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hTz-Mk-EEl"/>
-                    <constraint firstItem="6ca-oa-XHg" firstAttribute="leading" secondItem="uDC-2N-fEG" secondAttribute="trailing" constant="8" symbolic="YES" id="kuK-wM-mUe"/>
-                    <constraint firstItem="6ca-oa-XHg" firstAttribute="top" secondItem="Ppm-T2-7GH" secondAttribute="bottom" constant="2" id="ldv-pe-ieK"/>
+                    <constraint firstItem="6ca-oa-XHg" firstAttribute="leading" secondItem="Ppm-T2-7GH" secondAttribute="trailing" constant="8" id="le9-Qt-QlC"/>
+                    <constraint firstAttribute="trailing" secondItem="6ca-oa-XHg" secondAttribute="trailing" constant="6" id="p4K-tF-8U9"/>
                     <constraint firstAttribute="trailing" secondItem="MXA-4N-rFj" secondAttribute="trailing" constant="20" symbolic="YES" id="qrh-gW-juC"/>
                     <constraint firstItem="Ppm-T2-7GH" firstAttribute="top" secondItem="MXA-4N-rFj" secondAttribute="bottom" constant="8" symbolic="YES" id="y8x-Z0-Bxs"/>
+                    <constraint firstItem="2oC-Pd-7Ei" firstAttribute="top" secondItem="6ca-oa-XHg" secondAttribute="bottom" constant="8" symbolic="YES" id="yDQ-wV-Hrv"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -72,6 +87,7 @@
                 <outlet property="pinDescriptionLabel" destination="6ca-oa-XHg" id="nif-Mu-T1Y"/>
                 <outlet property="pinImage" destination="uDC-2N-fEG" id="TCN-EG-jIh"/>
                 <outlet property="pinNameLabel" destination="MXA-4N-rFj" id="KEC-YU-AaE"/>
+                <outlet property="reactionCollection" destination="2oC-Pd-7Ei" id="lgK-Zl-bvc"/>
             </connections>
             <point key="canvasLocation" x="152.17391304347828" y="127.90178571428571"/>
         </tableViewCell>
