--- a/community/Navigation/Feed/Cell/PinInFeedCell.xib
+++ b/community/Navigation/Feed/Cell/PinInFeedCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,14 +17,14 @@
                 <rect key="frame" x="0.0" y="0.0" width="340" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uDC-2N-fEG">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uDC-2N-fEG">
+                        <rect key="frame" x="5" y="5" width="90" height="90"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="uDC-2N-fEG" secondAttribute="height" multiplier="1:1" id="9HA-Xg-a3t"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MXA-4N-rFj">
-                        <rect key="frame" x="108" y="16" width="212" height="21"/>
+                        <rect key="frame" x="103" y="16" width="217" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="yuL-HQ-noJ"/>
                         </constraints>
@@ -33,9 +33,8 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ppm-T2-7GH">
-                        <rect key="frame" x="108" y="45" width="105" height="21"/>
+                        <rect key="frame" x="103" y="45" width="223" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="105" id="ARS-Wc-hVC"/>
                             <constraint firstAttribute="height" constant="21" id="M7U-oL-gFO"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -43,7 +42,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="2oC-Pd-7Ei">
-                        <rect key="frame" x="108" y="74" width="226" height="26"/>
+                        <rect key="frame" x="103" y="74" width="231" height="26"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HaA-jj-9TU">
                             <size key="itemSize" width="60" height="26"/>
@@ -53,9 +52,10 @@
                         </collectionViewFlowLayout>
                     </collectionView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ca-oa-XHg">
-                        <rect key="frame" x="221" y="45" width="113" height="21"/>
+                        <rect key="frame" x="334" y="45" width="0.0" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="TeW-TI-NFf"/>
+                            <constraint firstAttribute="width" id="XR0-et-4b3"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" name="secondaryGray"/>
@@ -64,16 +64,16 @@
                 </subviews>
                 <color key="backgroundColor" name="mainGray"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="uDC-2N-fEG" secondAttribute="bottom" id="1ld-N9-Slo"/>
+                    <constraint firstAttribute="bottom" secondItem="uDC-2N-fEG" secondAttribute="bottom" constant="5" id="1ld-N9-Slo"/>
                     <constraint firstItem="6ca-oa-XHg" firstAttribute="top" secondItem="MXA-4N-rFj" secondAttribute="bottom" constant="8" symbolic="YES" id="35S-kl-BoA"/>
-                    <constraint firstItem="uDC-2N-fEG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="6a9-Cc-ccv"/>
+                    <constraint firstItem="uDC-2N-fEG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="6a9-Cc-ccv"/>
                     <constraint firstItem="MXA-4N-rFj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="7FT-eb-cOU"/>
                     <constraint firstItem="MXA-4N-rFj" firstAttribute="leading" secondItem="uDC-2N-fEG" secondAttribute="trailing" constant="8" symbolic="YES" id="CqJ-O5-qkF"/>
                     <constraint firstAttribute="trailing" secondItem="2oC-Pd-7Ei" secondAttribute="trailing" constant="6" id="G16-Zp-7aR"/>
                     <constraint firstItem="Ppm-T2-7GH" firstAttribute="leading" secondItem="uDC-2N-fEG" secondAttribute="trailing" constant="8" symbolic="YES" id="IcM-kg-Gxt"/>
                     <constraint firstAttribute="bottom" secondItem="2oC-Pd-7Ei" secondAttribute="bottom" id="N1Y-9r-Of3"/>
                     <constraint firstItem="2oC-Pd-7Ei" firstAttribute="leading" secondItem="uDC-2N-fEG" secondAttribute="trailing" constant="8" symbolic="YES" id="YCA-hY-326"/>
-                    <constraint firstItem="uDC-2N-fEG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hTz-Mk-EEl"/>
+                    <constraint firstItem="uDC-2N-fEG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="hTz-Mk-EEl"/>
                     <constraint firstItem="6ca-oa-XHg" firstAttribute="leading" secondItem="Ppm-T2-7GH" secondAttribute="trailing" constant="8" id="le9-Qt-QlC"/>
                     <constraint firstAttribute="trailing" secondItem="6ca-oa-XHg" secondAttribute="trailing" constant="6" id="p4K-tF-8U9"/>
                     <constraint firstAttribute="trailing" secondItem="MXA-4N-rFj" secondAttribute="trailing" constant="20" symbolic="YES" id="qrh-gW-juC"/>
